# mlp-train

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE.md  README.md  aa.py  create_conda_environment.sh  environment.yml  environment_ace.yml  environment_mace.yml  install.sh  install_ace.sh  install_gap.sh  install_mace.sh  pyproject.toml  requirements.txt  requirements_ace.txt  requirements_gap.txt  requirements_mace.txt  setup.py  state_dict.py
.github/: dependabot.yml
.github/workflows/: docker.yml  main.yml  pre-commit.yml  pytest.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/dev/: contributing.rst  installation.rst
docs/examples/: data_preparation.rst  example1.rst  example2.rst  example3.rst  example_solvation.rst  metadynamics.rst
docs/references/: box.rst  energy.rst  forces.rst  index.rst  log.rst  molecule.rst  system.rst  utils.rst
docs/references/analysis/: calc_pes.rst  index.rst
docs/references/configurations/: calculate.rst  configuration.rst  configuration_set.rst  index.rst  plotting.rst  trajectory.rst
docs/references/descriptor/: _base.rst  descriptors.rst  index.rst  soap_descriptor.rst
docs/references/loss/: _base.rst  index.rst  mean_errors.rst  mlptrain.loss._base.rst  tau.rst
docs/references/potentials/: _base.rst  ace.rst  gap.rst  index.rst  mace.rst
docs/references/sampling/: _base.rst  bias.rst  index.rst  md.rst  md_openmm.rst  metadynamics.rst  plumed.rst  (+2 more)
docs/tutorials/: downhill_sampling.rst  tutorial1.rst  tutorial3.rst
examples/: da_ts.py  methane.py  tmp.py  water.py  water_openmm.py  water_openmm_colab.ipynb
examples/DA_paper/: readme.md
examples/WTMetaD_paper/: README.md
examples/ace/: template.jl
examples/container_usage/: README.md  singularity-build.sh  singularity-run.sh
examples/ts_opt_eg/: ts_opt_eg.py
examples/umbrella/: sn2.xyz  train.py  traj.xyz  umbrella.py
mlptrain/: __init__.py  autode_interface.py  box.py  config.py  descriptors.py  energy.py  forces.py  log.py  molecule.py  system.py  utils.py
mlptrain/analysis/: __init__.py  calc_pes.py  pes.py
mlptrain/configurations/: __init__.py  calculate.py  configuration.py  configuration_set.py  explicit_solvation.py  plotting.py  trajectory.py
mlptrain/descriptor/: __init__.py  _base.py  ace_descriptor.py  soap_descriptor.py
mlptrain/descriptors/: __init__.py  _base.py
mlptrain/loss/: __init__.py  _base.py  mean_errors.py  tau.py
mlptrain/potentials/: __init__.py  _base.py
mlptrain/sampling/: __init__.py  _base.py  bias.py  md.py  md_openmm.py  metadynamics.py  plumed.py  reaction_coord.py  umbrella.py
mlptrain/tools/: __init__.py  ts_opt.py
mlptrain/training/: __init__.py  active.py  selection.py
mltrain/: __init__.py  bias.py  box.py  config.py  descriptors.py  energy.py  forces.py  log.py  md.py  molecule.py  system.py  umbrella.py  utils.py  wham.py
mltrain/configurations/: __init__.py  calculate.py  configuration.py  configuration_set.py  plotting.py  trajectory.py
mltrain/logging/: __init__.py
mltrain/loss/: __init__.py  _base.py  mean_errors.py  tau.py
mltrain/potentials/: __init__.py  _base.py
mltrain/sampling/: __init__.py  _base.py  bias.py  md.py  reaction_coord.py  reaction_coordinate.py  umbrella.py
mltrain/tests/: h2.xyz  init.xyz  irc_IRC_Full_trj.xyz  test_bias.py
mltrain/training/: active.py  selection.py
paper/: SI.tex  draft.tex  refs.bib
paper/figures/: figX5.eps
scripts/: install_ace.sh  install_ase.sh  install_gap.sh  install_mace.sh  install_plumed.sh
tests/: .autode_calculations  H2O_opt_xtb.out  H2O_opt_xtb.xyz  H2O_optimised_xtb.xyz  conftest.py  duplicate_test.npz  duplicate_test.xyz  test_bias.py  test_calculate.py  test_configuration.py  test_configuration_set.py  test_descriptor.py  test_log.py  test_mace.py  test_md.py  test_metadynamics.py  test_openmm_md.py  test_pes.py  test_plotting.py  test_plumed.py  test_potential.py  test_reaction_coord.py  test_selection.py  test_system.py  test_trajectory.py  test_umbrella.py  test_utils.py  test_wham.py  tmp.xyz
tests/data/: methane.xyz  molecules.py  water_01.npz  water_al.npz
wham_testing/: free_energy.txt  metadata.dat.txt  tmp.py  wham.out  window_19.txt  window_3.txt  window_8.txt
(+439 files in other folders)
