[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlptrain"
description = "Machine Learning Potential Training"
authors = [{name = "Duarte Group"}]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
requires-python = ">=3.8"

[project.optional-dependencies]
docs = [
  'sphinx~=7.4.7',
  'sphinx-copybutton~=0.5.2',
  'sphinx-rtd-theme~=3.0.2', 
]

[project.urls]
Home = "https://github.com/duartegroup/mlp-train"
Source = "https://github.com/duartegroup/mlp-train"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "--cov-report term --cov-report xml"
