[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlptrain"
version = "1.0.0b0"
description = "Machine Learning Potential Training"
authors = [{name = "Duarte Group"}]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"

[dependency-groups]
dev = [
  'pre-commit>=3.6',
  'pytest~=8.0',
  'pytest-cov~=5.0',
  'ty==0.0.28',
]

[project.optional-dependencies]
docs = [
  'sphinx~=7.4.7',
  'sphinx-copybutton~=0.5.2',
  'sphinx-rtd-theme~=3.0.2', 
]

[project.urls]
Home = "https://github.com/duartegroup/mlp-train"
Source = "https://github.com/duartegroup/mlp-train"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["TID253"]

[tool.ruff.lint.flake8-tidy-imports]
# Ban certain modules from being imported at module level, instead requiring
# that they're imported lazily (e.g., within a function definition). (rule TID253)
banned-module-level-imports = ["mace", "openmm", "openmmml", "sklearn", "torch"]

[tool.pytest.ini_options]
addopts = "--cov-report term --cov-report xml"

[tool.ty.terminal]
# Error if ty emits any warning-level diagnostics.
error-on-warning = true

# Enable all rules for these files
[[tool.ty.overrides]]
include = [
  "mlptrain/configurations/configuration.py",
  "mlptrain/sampling/metadynamics.py",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

# Don't typecheck python scripts from examples/*_paper/
[[tool.ty.overrides]]
include = [
  "examples/*paper*/*",
]
[tool.ty.overrides.rules]
all = "ignore"
